Fixed overflow issue on home.php ...again.

--- a/www/sass/pages/_home.scss
+++ b/www/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 // HOME page SCSS
-
-.home {
+html,
+body.home {
 	overflow-x: hidden;
 	width: 100%;
 }
